# mentormatch

./: .gitignore  AUTHORS.rst  CONTRIBUTING.rst  LICENSE  MANIFEST.in  Makefile  README.rst  application_schema.toml  editable_install.bat  pyproject.toml  setup.cfg  setup.py  test_install_fdr.bat  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  index.rst  installation.rst  make.bat  usage.rst
mentormatch/: __init__.py  application_schema.toml  cli.py  config.py  import_from_excel.py
mentormatch/api/: __init__.py
mentormatch/app/: api.py  setup_app_context.py  setup_compatibility_checker.py  setup_compatibility_checker_factory.py  setup_context.py  setup_ranker.py  setup_sorter_context_mgr.py
mentormatch/applicant/: __init__.py  applicant.py  applicant_abc.py  applicant_abstract.py  applicant_collection.py  applicant_factory.py  applicant_implementation_mentee.py  applicant_implementation_mentor.py  applicant_mentee.py  applicant_mentor.py  applicants.py
mentormatch/applicants/: __init__.py  all_applicants.py  applicant.py  applicant_base.py  applicant_mentee.py  applicant_mentor.py  applicants.py  applicants_generator.py  applicants_group.py  collection_applicants.py  collection_mentees.py  (+12 more)
src/: __init__.py  cli.py
tests/: _test_openpyxl.py  conftest.py  enum.py  excel.xlsx  mentees.toml  mentors.toml  random_applicant_generator.py  random_name_generator.py  randomly_generated_applicants.py  smoke_test.py  test_allapplicants.py  test_api.py  test_import.py  test_mentormatch.py  test_mentormatch.xlsx  test_unit_applicant.py  test_unit_sorter.py
(+284 files in other folders)
